# JETStream

./: .gitignore  CMakeLists.txt  Makefile  README.md  main  run_generator.sh  run_main.sh  run_trainer.sh  train_network.sh
Core/: CMakeLists.txt
Core/JNetwork/: CMakeLists.txt
Core/JNetwork/include/: CoreLinkDef.hpp  JLoss.hpp  JStreamData.hpp  JTorchNet.hpp
Core/JNetwork/src/: CMakeLists.txt  JLoss.cxx  JStreamData.cxx  JTorchNet.cxx
Core/JUtils/: CMakeLists.txt
Core/JUtils/include/: CoreLinkDef.hpp  JUtility.hpp
Core/JUtils/src/: CMakeLists.txt  JUtility.cxx
Core/PythiaEvent/: CMakeLists.txt
Core/PythiaEvent/include/: CoreLinkDef.hpp  PythiaEvent.hpp
Core/PythiaEvent/src/: CMakeLists.txt  PythiaEvent.cxx
Core/include/: PythiaEvent.h  PythiaEventLinkDef.h
Core/src/: PythiaEvent.cxx
Tasks/: CMakeLists.txt  generator.cxx  main.cxx  trainer.cxx
pydir/config/: conf_default.yml
pydir/dataio/: JETStreamData.py
pydir/engine/: train.py
pydir/io/: JETStreamData.py
pydir/jutils/: loss.py
pydir/network/: model.py
pydir/test/: testtree.py
